# youtube-comment-downloader

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.py  downloader.py  manage.py  process-list.sh  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  stale..yml
app/: __init__.py  models.py
app/main/: __init__.py  comment_loader.py  commet_loader.py  errors.py  forms.py  views.py
app/templates/: base.html  index.html  name.html  yt.html
tests/: test_search_dict.py
youtube-comment-downloader/: __main__.py  downloader.py
youtube_comment_downloader/: __init__.py  __main__.py  comment.py  downloader.py
youtube_insights/: __init__.py  __main__.py  downloader.py
