[metadata]
name = youtube-comment-downloader
version = 0.1
description = Simple script for downloading Youtube comments without using the Youtube API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/egbertbouman/youtube-comment-downloader
author = Egbert Bouman
author_email = ebouman@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    dateparser
    requests

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    youtube-comment-downloader = youtube_comment_downloader:main
