[metadata]
name = youtube-comment-downloader
version = 0.1
description = Simple script for downloading Youtube comments without using the Youtube API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/eiskaffe/youtube-comment-downloader
author = eiskaffe
author_email = szakallasmikulas6@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    dateparser
    requests
    alive-progress

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    youtube-comment-downloader = youtube_comment_downloader:main