[metadata]
name = youtube-insights
version = 0.1
description = Simple script for downloading Youtube comments without using the Youtube API, based on Egbert Bouman''s youtube-comment-downloader
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
url = https://github.com/schneiderkamplab/youtube-insights
author = Peter Schneider-Kamp
author_email = petersk@imada.sdu.dk
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    dateparser
    requests
    tqdm

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    youtube-insights = youtube_insights:main
